// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log should render alert in case of error in query 1`] = `
<strong
  className="typography__AlertText-sc-1yq3b4j-4 jtexIl"
>
  Tapahtui odottamaton virhe, emmekä juuri nyt pysty näyttämään tietoja.
</strong>
`;

exports[`Log should render with empty log 1`] = `
<div>
  <div
    className="Log__NotificationText-sc-1asjtoe-0 XCMdZ"
  >
    <p>
      Tällä sivulla näytetään toimijat, jotka ovat käyttäneet opintotietojasi.
    </p>
    <p>
      Sivu on tyhjä, koska tietojasi ei ole vielä käytetty.**
    </p>
  </div>
  <div
    className="Footnote__Container-sc-x809r1-0 bUPHsG"
  >
    *
     
    Koskee vain opintotietoja, ei hakemustietoja. Lisätietoa hakemusten henkilötietojen käsittelyn perusteista sekä henkilötietojen luovuttamisesta saat 
    <a
      className="typography__Link-sc-1yq3b4j-5 cJIYQp"
      href="https://opintopolku.fi/wp/fi/tietosuojaseloste/"
      target="_blank"
    >
      <test-file-stub
        className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 dRZGgw"
      />
      <b
        className="typography__Bold-sc-1yq3b4j-6 hlMPgm"
      >
        tietosuojaselosteesta
      </b>
    </a>
    .
  </div>
  <div
    className="Footnote__Container-sc-x809r1-0 bUPHsG"
  >
    **
     
    Tietojen käyttäjät näytetään 14.11.2018 jälkeiseltä ajalta.
  </div>
</div>
`;

exports[`Log should render with non-empty log 1`] = `
Array [
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 BvtnH"
  >
    Tietojen käyttäjä**
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fExEJK"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 ekUJgW"
      onClick={[Function]}
    >
      <span
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 cWphqs"
      >
        +
      </span>
      Organisaatio 1
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fExEJK"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 ekUJgW"
      onClick={[Function]}
    >
      <span
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 cWphqs"
      >
        +
      </span>
      Test 2
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 bUPHsG"
  >
    *
     
    Koskee vain opintotietoja, ei hakemustietoja. Lisätietoa hakemusten henkilötietojen käsittelyn perusteista sekä henkilötietojen luovuttamisesta saat 
    <a
      className="typography__Link-sc-1yq3b4j-5 cJIYQp"
      href="https://opintopolku.fi/wp/fi/tietosuojaseloste/"
      target="_blank"
    >
      <test-file-stub
        className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 dRZGgw"
      />
      <b
        className="typography__Bold-sc-1yq3b4j-6 hlMPgm"
      >
        tietosuojaselosteesta
      </b>
    </a>
    .
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 bUPHsG"
  >
    **
     
    Tietojen käyttäjät näytetään 14.11.2018 jälkeiseltä ajalta.
  </div>,
]
`;

exports[`Log should render with non-empty log and language en 1`] = `
Array [
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 BvtnH"
  >
    User of data**
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fExEJK"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 ekUJgW"
      onClick={[Function]}
    >
      <span
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 cWphqs"
      >
        +
      </span>
      Organization 1
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fExEJK"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 ekUJgW"
      onClick={[Function]}
    >
      <span
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 cWphqs"
      >
        +
      </span>
      Test 2
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 bUPHsG"
  >
    *
     
    This applies only to study-related information. Please check the 
    <a
      className="typography__Link-sc-1yq3b4j-5 cJIYQp"
      href="https://studyinfo.fi/wp2/en/register/"
      target="_blank"
    >
      <test-file-stub
        className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 dRZGgw"
      />
      <b
        className="typography__Bold-sc-1yq3b4j-6 hlMPgm"
      >
        register description
      </b>
    </a>
     if you want to know how the information you have given in joint/separate applications is used.
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 bUPHsG"
  >
    **
     
    Showing organisations that have used your data after 14.11.2018.
  </div>,
]
`;

exports[`Log should render with non-empty log and language sv 1`] = `
Array [
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 BvtnH"
  >
    Uppgiftsanvändare**
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fExEJK"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 ekUJgW"
      onClick={[Function]}
    >
      <span
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 cWphqs"
      >
        +
      </span>
      Organisation 1
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fExEJK"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 ekUJgW"
      onClick={[Function]}
    >
      <span
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 cWphqs"
      >
        +
      </span>
      Test 2
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 bUPHsG"
  >
    *
     
    Gäller studieuppgifter, dvs. inte uppgifter som ingår i ansökningar. I 
    <a
      className="typography__Link-sc-1yq3b4j-5 cJIYQp"
      href="https://studieinfo.fi/wp/sv/dataskyddsbeskrivning/"
      target="_blank"
    >
      <test-file-stub
        className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 dRZGgw"
      />
      <b
        className="typography__Bold-sc-1yq3b4j-6 hlMPgm"
      >
        dataskyddsbeskrivningen
      </b>
    </a>
     får du information om grunderna för användning av personuppgifter i ansökningarna och hur de kan överlåtas.
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 bUPHsG"
  >
    **
     
    Här visas aktörerna som använt dina studieuppgifterna efter 14.11.2018.
  </div>,
]
`;

exports[`Log should render with non-empty log and organization with no English name 1`] = `
Array [
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 BvtnH"
  >
    User of data**
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fExEJK"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 ekUJgW"
      onClick={[Function]}
    >
      <span
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 cWphqs"
      >
        +
      </span>
      Organisaatio 1
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 bUPHsG"
  >
    *
     
    This applies only to study-related information. Please check the 
    <a
      className="typography__Link-sc-1yq3b4j-5 cJIYQp"
      href="https://studyinfo.fi/wp2/en/register/"
      target="_blank"
    >
      <test-file-stub
        className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 dRZGgw"
      />
      <b
        className="typography__Bold-sc-1yq3b4j-6 hlMPgm"
      >
        register description
      </b>
    </a>
     if you want to know how the information you have given in joint/separate applications is used.
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 bUPHsG"
  >
    **
     
    Showing organisations that have used your data after 14.11.2018.
  </div>,
]
`;
